HW2/part4/t10.output
running e2c
compiling the C generated code
t10.c: In function ‘main’:
t10.c:5:8: warning: zero-length gnu_printf format string [-Wformat-zero-length]
 printf("", 2341);
        ^
t10.c:6:1: error: expected ‘}’ before ‘else’
 else if( 0 >= (12)){
 ^
t10.c:7:8: warning: zero-length gnu_printf format string [-Wformat-zero-length]
 printf("", 9999);
        ^
t10.c:8:1: error: expected ‘}’ before ‘else’
 else {printf("", 8888);
 ^
t10.c:8:14: warning: zero-length gnu_printf format string [-Wformat-zero-length]
 else {printf("", 8888);
              ^
t10.c:9:1: error: expected declaration or statement at end of input
 }
 ^
